samples/_failures_safe/1761142173_0a5387_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b60810f.c: In function ‘calculate_volume’:
./samples/SAFE/__tmp_9b60810f.c:135:17: error: expected ‘)’ at end of input
  135 |     if (dx < 0.0
      |        ~        ^
      |                 )
./samples/SAFE/__tmp_9b60810f.c:135:5: error: expected declaration or statement at end of input
  135 |     if (dx < 0.0
      |     ^~
